--- a/src/assets/scss/components/index.scss
+++ b/src/assets/scss/components/index.scss
@@ -8,4 +8,6 @@
 @import "./bags";
 @import "./characters";
 @import "./sidebar";
-@import "./accordin";
+@import "./about";
+@import "./singleCharacter";
+@import "./gameplay"
