--- a/src/assets/scss/components/_gameplay.scss
+++ b/src/assets/scss/components/_gameplay.scss
@@ -75,6 +75,7 @@
         background-image: url('../../images/MeettheCharacter1.png');
         background-repeat: no-repeat;
         background-position: center center;
+        background-attachment: fixed;
         height: auto;
         background-size: cover;
         display: flex;
