--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -53,7 +53,7 @@
     transition: transform 300ms linear, background-color 0s linear 300ms, -webkit-transform 300ms linear;
 
     .nav-border {
-        border-bottom: 1px solid #F35727;
+        border-bottom: 1px solid #212529;
     }
 
     .navbar-brand {
@@ -65,13 +65,13 @@
     }
 
     .nav-item .nav-link {
-        font-size: 1.7em !important;
+        font-size: 1.5em !important;
         margin: 0.1em 0.5em !important;
         padding: 0.2em 0.7em !important;
     }
 
     .nav-footer {
-        border-top: 1px solid #F35727;
+        border-top: 1px solid #212529;
 
         .social-icons {
             margin: 1.5em;
@@ -87,7 +87,7 @@
         }
 
         .copyright {
-            font-size: 1em;
+            font-size: 0.3em;
         }
     }
 }
@@ -99,7 +99,7 @@
     height: 100%;
     top: 0;
     right: 0;
-    background-color: #212529;
+    background-color: rgb(20 24 41);
     // border-radius: 50%;
     z-index: -1;
     -webkit-transition: all 300ms linear;
