--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -1,5 +1,11 @@
 // responsive media query
 @mixin max-break-point($media) {
+  @if $media==extra-small {
+    @media only screen and (max-width: 300px) {
+      @content;
+    }
+  }
+
   @if $media==mobile-phone {
     @media only screen and (max-width: 576px) {
       @content;
@@ -39,13 +45,13 @@
 
 @mixin min-break-point($media) {
   @if $media==mobile-phone {
-    @media only screen and (max-width: 576px) {
+    @media only screen and (min-width: 576px) {
       @content;
     }
   }
 
   @if $media==tablet {
-    @media only screen and (max-width: 767px) {
+    @media only screen and (min-width: 767px) {
       @content;
     }
   }
