--- a/src/assets/scss/components/_about.scss
+++ b/src/assets/scss/components/_about.scss
@@ -1,6 +1,5 @@
 .about {
     .about-hero {
-        background-image: url('../../images/about.png');
         height: 100vh;
         background-repeat: no-repeat;
         background-position: top center;
@@ -9,20 +8,38 @@
         display: flex;
         position: relative;
 
+        .bg-img {
+            background-image: url('../../images/about.png');
+            height: 100vh;
+            background-repeat: no-repeat;
+            background-position: top center;
+            background-size: cover;
+            text-align: center;
+            display: flex;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1;
+
+        }
+
         &::after {
             content: '';
-            background-image: linear-gradient(180deg, rgba(20, 24, 41, 0.5) 100%, rgba(20, 24, 41, 0.85) 50%, #141829 67%);
+            background-color: #5C658B;
+            mix-blend-mode: overlay;
             position: absolute;
             bottom: 0;
             top: 0;
             left: 0;
             right: 0;
             width: 100%;
+            z-index: 2;
         }
 
         .contents {
             width: 55%;
-            z-index: 1;
+            z-index: 4;
             margin: 0 auto;
 
             .title {
@@ -36,17 +53,33 @@
     }
 
     .roadmap {
+        background-image: url('../../images/roadmapbg.png');
         background-color: $gray;
+        background-repeat: no-repeat;
+        background-position: center center;
+        height: auto;
+        background-size: cover;
         position: relative;
+        padding-bottom: 5em;
 
-        &::after {
+        &::before {
             content: '';
             position: absolute;
             background-image: linear-gradient(180deg, rgba(20, 24, 41, 0) 0%, #141829 37.05%, #141829 55.34%, #141829 71.08%, rgba(20, 24, 41, 0) 97.48%);
             height: 10em;
             top: -6em;
             left: 0;
+            z-index: 4;
             width: 100%;
+        }
+
+        &::after {
+            content: '';
+            background-image: linear-gradient(180deg, rgba(20, 24, 41, 0) 0%, #141829 37.05%, #141829 55.34%, #141829 71.08%, rgba(20, 24, 41, 0) 97.48%);
+            position: absolute;
+            bottom: -2em;
+            width: 100%;
+            height: 10em;
         }
 
         .wrapper {
