--- a/src/assets/scss/components/_characters.scss
+++ b/src/assets/scss/components/_characters.scss
@@ -10,8 +10,90 @@
         width: 100%;
 
         .wrapper {
+
+            .carousel {
+                position: relative;
+            }
+
+            .owl-stage-outer {
+                height: 35em;
+
+                &::before {                   
+                    background: linear-gradient(94.71deg, #141829 39.64%, rgba(20, 24, 41, 0) 88.87%);
+                    transform: matrix(-1, 0, 0, 1, 0, 0);
+                    content: '';
+                    position: absolute;
+                    right: 0;
+                    z-index: 9999;
+                    top: 16%;
+                    height: 18em;
+                    width: 9em;
+                }
+                &::after {
+                    background-image: linear-gradient(94.71deg, #141829 39.64%, rgba(20, 24, 41, 0) 88.87%);
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    z-index: 9999;
+                    top: 16%;
+                    height: 18em;
+                    width: 9em;
+                }
+            }
+
             .owl-stage {
                 padding: 5em 0 2em 0;
+            }
+
+            .owl-nav {
+                margin-top: 10px;
+                top: 0;
+                z-index: 4;
+
+                .owl-prev,
+                .owl-next {
+                    position: absolute;
+                    top: 36%;
+                    font-size: 55px;
+                    color: $white;
+                    margin: 0 1em;
+                    transition: 0.2s ease;
+                }
+
+                .owl-prev {
+                    left: 0;
+                    background-image: url('../../images/leftarrow.svg');
+                    width: 90px;
+                    height: 90px;
+                    background-size: contain;
+                    opacity: 0.1;
+
+                    &:hover {
+                        background-image: url('../../images/leftarrow.svg') !important;
+                        opacity: 1;
+                    }
+                }
+
+                .owl-next {
+                    right: 0;
+                    background-image: url('../../images/rightarrow.svg');
+                    width: 90px;
+                    height: 90px;
+                    background-size: contain;
+                    opacity: 0.1;
+
+                    &:hover {
+                        background-image: url('../../images/rightarrow.svg') !important;
+                        opacity: 1;
+                    }
+                }
+
+                [class*=owl-]:hover {
+                    &:hover {
+                        background: none;
+                        color: $primary-color;
+                    }
+                }
             }
         }
 
@@ -74,9 +156,24 @@
                     }
                 }
 
-                .player-type {
-                    font-size: 1.625em;
-                    color: #F35629;
+                .type {
+
+                    img {
+                        width: 25px;
+                        height: 25px;
+                    }
+
+                    .type-text {
+                        margin-left: 0.6em;
+
+                        span {
+                            font-size: 1.125em;
+                            line-height: 0.438em;
+                            color: $white;
+                            font-weight: 400;
+                            display: inline-block;
+                        }
+                    }
                 }
             }
 
@@ -91,7 +188,7 @@
         }
 
         .active.center {
-            margin: 0 1em;
+            margin: 0 1.5em;
 
             .item {
                 -webkit-transform: scale(1.2);
@@ -100,11 +197,11 @@
                 .image {
                     background-image: url('../../images/border.png');
 
-                    &::before{
+                    &::before {
                         background-color: transparent;
                     }
 
-                    figure > div{
+                    figure>div {
                         position: initial !important;
                         overflow: visible !important;
                     }
@@ -112,7 +209,9 @@
                     img {
                         width: 166px;
                         height: 244px;
-                        object-fit: cover;
+                        object-fit: contain;
+                        transform: scale(1.2);
+                        z-index: 5;
                     }
 
                 }
@@ -129,9 +228,24 @@
                         }
                     }
 
-                    .player-type {
-                        font-size: 1.625em;
-                        color: #F35629;
+                    .type {
+
+                        img {
+                            width: 25px;
+                            height: 25px;
+                        }
+
+                        .type-text {
+                            margin-left: 0.6em;
+
+                            span {
+                                font-size: 1.125em;
+                                line-height: 0.438em;
+                                color: $white;
+                                font-weight: 400;
+                                display: inline-block;
+                            }
+                        }
                     }
                 }
 
