--- a/src/assets/scss/components/_about.scss
+++ b/src/assets/scss/components/_about.scss
@@ -132,6 +132,10 @@
                         .box {
                             justify-content: flex-end;
 
+                            .info{
+                                text-align: right;
+                            }
+
                             figure {
                                 order: 1;
                                 margin-left: 3em;
