--- a/src/assets/scss/components/_gameplay.scss
+++ b/src/assets/scss/components/_gameplay.scss
@@ -100,12 +100,14 @@
                     font-size: 4.12em;
                     color: $white;
                 }
+
+                line-height: 4.5em;
             }
 
             .tasks {
                 padding-bottom: 6em;
 
-                .row{
+                .row {
                     margin-top: 17em;
                 }
             }
