--- a/src/assets/scss/components/_singleCharacter.scss
+++ b/src/assets/scss/components/_singleCharacter.scss
@@ -140,7 +140,7 @@
                 cursor: pointer;
             }
 
-            .slick-slide.slick-active.slick-center.slick-current img {
+            .slick-slide.slick-active.slick-current img {
                 filter: none;
             }
         }
