--- a/src/assets/scss/components/_history.scss
+++ b/src/assets/scss/components/_history.scss
@@ -7,6 +7,7 @@
     text-align: center;
     display: flex;
     position: relative;
+    padding-bottom: 3em;
 
     &::before {
         content: '';
