--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #F35629;
 $secondary-color: #315efb;
+$light-blue: rgba(38, 178, 231, 0.2);
 $title: #1f2431;
 $text-color: #777d94;
 $brown: #c4c4c4;
@@ -17,6 +18,8 @@ $light-second-grey: #d8deec;
 $primary-box-shadow: rgba(0, 0, 0, 0.075);
 $secondary-box-shadow: rgba(4, 17, 29, 0.25);
 $gray: #141829;
+$aqua: rgba(3, 187, 240, 1);
+$green: rgba(0, 251, 105, 1);
 
 $skeleton-background: #eeeeee;
 $skeleton-wrapper: #fafcff;
