--- a/src/assets/scss/pages/_faq.scss
+++ b/src/assets/scss/pages/_faq.scss
@@ -3,7 +3,7 @@
     padding-top: 5em;
 
     .heading {
-        font-family: "evil-empire-Regular", sans-serif;
+        font-family: $imported-font-family;
         font-size: 4.12em;
         letter-spacing: 4px;
         color: $white;
