--- a/src/assets/scss/components/_discover.scss
+++ b/src/assets/scss/components/_discover.scss
@@ -62,6 +62,12 @@
                         color: $white;
                     }
                 }
+
+                transition: 0.3s ease;
+
+                &:hover {
+                    transform: scale(0.9);
+                }
             }
 
         }
