--- a/src/assets/scss/components/_responsiveness.scss
+++ b/src/assets/scss/components/_responsiveness.scss
@@ -245,6 +245,14 @@
             }
         }
     }
+
+    .about .about-hero .bg-img{
+        height: 100% !important;
+    }
+
+    .faq .heading{
+        font-size: 2.25em !important;
+    }
 }
 
 @include max-break-point(wide-screen) {
