--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -40,6 +40,7 @@ $black: #000000;
 $dollar-color: #7bb661;
 
 $bg-color: linear-gradient(270.35deg, #F35727 3.9%, #FD8864 97.35%);
+$bg-colors: linear-gradient(270.35deg, #276ef3 3.9%, #6488fd 97.35%);
 
 $theme-colors: ("green": #47bf2d,
   "secondary": #315efb,
