--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -1,5 +1,6 @@
 #header {
   transition: 0.2s ease;
+
   .navbar-brand {
     font-family: $imported-font-family;
     font-size: 2.6em;
@@ -64,10 +65,15 @@
     background-image: $bg-color;
     color: $white;
     font-weight: 500;
+    transition: 0.3s ease;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
-.header{
+.header {
   padding-top: 1em;
 }
 
@@ -76,21 +82,22 @@
   box-shadow: 0px 3px 6px rgb(0 0 0 / 16%);
   padding-top: 0;
 
-  .navbar-brand{
+  .navbar-brand {
     color: #F35728 !important;
   }
 
-  .nav-item{
-    .nav-link:hover{
+  .nav-item {
+    .nav-link:hover {
       color: #F35728 !important;
     }
   }
 }
 
-.btn-check:focus + .btn, .btn:focus{
+.btn-check:focus+.btn,
+.btn:focus {
   box-shadow: none !important;
 }
 
-.selected{
+.selected {
   color: #F35728 !important;
 }
