--- a/src/assets/scss/pages/_buyBag.scss
+++ b/src/assets/scss/pages/_buyBag.scss
@@ -13,6 +13,7 @@
 
     .bags {
         margin-top: 3em;
+
         .row {
             padding-bottom: 8em;
 
@@ -21,7 +22,7 @@
                 justify-content: center;
             }
 
-            .right{
+            .right {
                 padding-right: 0;
             }
         }
@@ -94,6 +95,11 @@
                 background-image: $bg-color;
                 color: $white;
                 padding: 0.4em 2.7em;
+                transition: 0.3s ease;
+
+                &:hover {
+                    transform: scale(1.1);
+                }
             }
         }
 
@@ -106,6 +112,7 @@
             .right {
                 padding-right: unset;
                 padding-left: 0;
+
                 .ribbon {
                     justify-content: flex-end;
                     text-align: right;
