--- a/src/assets/scss/pages/_buyBag.scss
+++ b/src/assets/scss/pages/_buyBag.scss
@@ -20,6 +20,16 @@
             .left {
                 display: flex;
                 justify-content: center;
+
+                figure {
+                    img {
+                        transition: 0.3s ease;
+
+                        &:hover {
+                            transform: scale(1.1);
+                        }
+                    }
+                }
             }
 
             .right {
