--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -105,3 +105,21 @@
     -webkit-transition: all 300ms linear;
     transition: all 300ms linear;
 }
+
+.fixed_body {
+    overflow: hidden;
+}
+
+.fixed_body .mask-box {
+    transition: opacity .5s, visibility .5s;
+    opacity: 1;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.5);
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    content: "";
+    transition: opacity .5s, visibility .5s;
+}
