--- a/src/assets/scss/components/_history.scss
+++ b/src/assets/scss/components/_history.scss
@@ -38,6 +38,7 @@
             line-height: 0.438em;
             color: #F35629;
             font-weight: 400;
+            text-shadow: 0.5px 0.5px #f35629;
         }
 
         .title {
