--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -7,6 +7,7 @@
         text-align: center;
         display: flex;
         position: relative;
+        padding-top: 6em;
 
         .bg-img {
             background-image: url('../../images/about.png');
