--- a/src/assets/scss/components/_bags.scss
+++ b/src/assets/scss/components/_bags.scss
@@ -66,8 +66,8 @@
 
             .title {
                 img {
-                    width: 2em;
-                    height: 2em;
+                    width: 3em !important;
+                    height: 3em !important;
                 }
 
                 .chest-title {
@@ -80,7 +80,7 @@
             }
 
             .price {
-                font-size: 1.1em;
+                font-size: 1.25em;
                 color: #777d94;
 
                 .gamePrice {
