--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -15,7 +15,7 @@
         }
 
         .navigation-links {
-            margin: 1em 0 0.3em 0;
+            margin: 0 0 0.3em 0;
 
             .nav-item {
                 .nav-link {
