--- a/src/assets/scss/components/_bags.scss
+++ b/src/assets/scss/components/_bags.scss
@@ -35,7 +35,7 @@
         .heading {
             font-size: 1.625em;
             line-height: 0.438em;
-            color: #F35629;
+            color: $primary-color;
             font-weight: 400;
         }
 
@@ -92,8 +92,8 @@
                 .learnMore {
                     span {
                         img {
-                            width: 10px;
-                            height: 10px;
+                            width: 0.625em;
+                            height: 0.625em;
                         }
                     }
                 }
