--- a/src/assets/scss/components/_discover.scss
+++ b/src/assets/scss/components/_discover.scss
@@ -10,7 +10,7 @@
         .heading {
             font-size: 1.625em;
             line-height: 0.438em;
-            color: #F35629;
+            color: $primary-color;
             font-weight: 400;
         }
 
