--- a/src/assets/scss/pages/_gameplay.scss
+++ b/src/assets/scss/pages/_gameplay.scss
@@ -57,7 +57,7 @@
             .heading span {
                 font-size: 1.625em;
                 line-height: 0.438em;
-                color: #F35629;
+                color: $primary-color;
                 font-weight: 400;
             }
 
